# deep_learning_workshop_tasks

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt
commonlearningdata/: CMakeLists.txt  README.md  README.txt
commonlearningdata/cartooncats/: CMakeLists.txt  README.txt
utilities/augmentation/: config.json  generator.py
utils/: CMakeLists.txt  __init__.py  datasetscommon.py  imagedatasets.py  reports.py
utils/imagesaugmentation/: CMakeLists.txt  generator.py
workshop2/: CMakeLists.txt  README.txt  catrecognizermain.py  logisticregressionmain.py
workshop2/oserkin/: lg.py  neuronTest.py
workshop3/: CMakeLists.txt  fullyconnectedmain.py
